Blog 1.5.4

	* Increase the blog title length from 64 to 256 characters.
	-- Charlie Powell <charlie@eval.bz>  Mon, 30 Sep 2013 00:01:02 -0400

Blog 1.5.3

	* Minor update to switch to the instantiated version of the View.
	-- Charlie Powell <charlie@eval.bz>  Sat, 24 Aug 2013 22:15:57 -0400

Blog 1.5.2

	* [Bug] Fix the bug of waypoints not knowing where the reference point is.
	* [Bug] Fix the remote article links, they now open in a new window.
	* [Feature] Implement Feature #442 - RSS link/icon on individual article pages.
	* [Feature] Blog articles support changing of the published date, both in the future and past.
	* Cleanup the publish options for article creation and updating.
	-- Charlie Powell <charlie@eval.bz>  Tue, 06 Aug 2013 20:35:33 -0400

Blog 1.5.1

	* [Bug] Fixed Bug #409 - RSS feed not validating by w3
	* [Bug] Minor bug where the blog type could be modified after creation, thus causing odd issues.
	* [Feature] Added support for browsing for the showcase image.
	* [Feature] Set the remote blogs to be imported daily via a cron.
	* Switched all the images to be resolved in the database.  This is to support the new format of the
	  fileinput field.
	-- Charlie Powell <charlie@eval.bz>  Sat, 20 Jul 2013 04:12:20 -0400

Blog 1.5.0

	* [Feature] Added the ability to create a remote-driven blog.  This blog is one that is entirely
	  driven from an external RSS feed and links back to that original site.
	* [Feature] Added a quick unpublish link for articles.
	* [Feature] Added an RSS feed option for blogs.
	* [Feature] Added an Atom feed option for blogs.
	* Switched blogs and blog articles to UUIDs instead of IDs.
	-- Charlie Powell <charlie@eval.bz>  Wed, 19 Jun 2013 04:54:54 -0400

Blog 1.4.5

	* [Bug] Fixed the facebook integration for existing articles.  This was broken for articles that were
	  created as draft and later set to published.
	* [Feature] Implement the new Core parse_html function to preprocess images for blog posts.